[metadata]
name = packit-service-centos-msg
url = n/a
description = Centos messaging consumer for packit-service
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development
keywords =
    centos
    messaging
    packit


[options]
packages = find:
python_requires = >=3.7
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    celery[redis]
    fedora-messaging
    copr-messaging
    click

[options.entry_points]
console_scripts =
    listen-to-centos-messaging=packit_service_centos_msg.cli:listen_to_centos_messaging
